--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-paper": "^5.13.1",
+    "react-native-paper-dates": "^0.22.34",
     "react-native-safe-area-context": "^5.2.0"
   },
   "devDependencies": {
